--- a/ide/publishmoduledlg.lfm
+++ b/ide/publishmoduledlg.lfm
@@ -7,10 +7,11 @@ object PublishModuleDialog: TPublishModuleDialog
   Caption = 'Publish Module'
   ClientHeight = 320
   ClientWidth = 642
+  Position = poScreenCenter
+  LCLVersion = '4.99.0.0'
+  OnActivate = FormActivate
   OnClose = FormClose
   OnCreate = FormCreate
-  Position = poScreenCenter
-  LCLVersion = '2.1.0.0'
   object DestDirGroupBox: TGroupBox
     Left = 6
     Height = 66
@@ -21,17 +22,17 @@ object PublishModuleDialog: TPublishModuleDialog
     Caption = 'Destination directory'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
-    ClientHeight = 36
+    ClientHeight = 46
     ClientWidth = 626
     TabOrder = 0
     object DestDirComboBox: TComboBox
       AnchorSideRight.Control = BrowseDestDirBitBtn
       Left = 6
-      Height = 32
+      Height = 23
       Top = 6
-      Width = 564
+      Width = 579
       Anchors = [akTop, akLeft, akRight]
-      ItemHeight = 24
+      ItemHeight = 15
       TabOrder = 0
       Text = 'DestDirComboBox'
     end
@@ -40,39 +41,40 @@ object PublishModuleDialog: TPublishModuleDialog
       AnchorSideRight.Side = asrBottom
       AnchorSideBottom.Control = DestDirComboBox
       AnchorSideBottom.Side = asrBottom
-      Left = 570
-      Height = 32
+      Left = 585
+      Height = 23
       Top = 6
-      Width = 50
+      Width = 35
       Anchors = [akTop, akRight, akBottom]
+      AutoSize = True
       BorderSpacing.Right = 6
       Caption = '...'
-      OnClick = BrowseDestDirBitBtnCLICK
       TabOrder = 1
+      OnClick = BrowseDestDirBitBtnCLICK
     end
   end
   object OptionsGroupbox: TGroupBox
     AnchorSideTop.Control = FilterCombobox
     AnchorSideTop.Side = asrBottom
     Left = 6
-    Height = 83
-    Top = 168
+    Height = 51
+    Top = 153
     Width = 628
     Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Around = 6
     Caption = 'Options'
     ChildSizing.TopBottomSpacing = 6
-    ClientHeight = 53
+    ClientHeight = 31
     ClientWidth = 624
     TabOrder = 4
     object CompressCheckbox: TCheckBox
       AnchorSideRight.Side = asrBottom
       Left = 6
-      Height = 22
+      Height = 19
       Hint = 'Compress the whole directory into a ZIP file.'
       Top = 6
-      Width = 90
+      Width = 71
       BorderSpacing.Around = 6
       Caption = 'Compress'
       ParentShowHint = False
@@ -82,10 +84,10 @@ object PublishModuleDialog: TPublishModuleDialog
     object OpenInFileManCheckbox: TCheckBox
       AnchorSideRight.Side = asrBottom
       Left = 108
-      Height = 22
+      Height = 19
       Hint = 'Open destination directory in file manager'
       Top = 6
-      Width = 158
+      Width = 129
       BorderSpacing.Around = 6
       Caption = 'Open in file manager'
       ParentShowHint = False
@@ -95,8 +97,8 @@ object PublishModuleDialog: TPublishModuleDialog
   end
   object ButtonPanel1: TButtonPanel
     Left = 6
-    Height = 29
-    Top = 285
+    Height = 26
+    Top = 288
     Width = 630
     OKButton.Name = 'OKButton'
     OKButton.DefaultCaption = True
@@ -113,21 +115,21 @@ object PublishModuleDialog: TPublishModuleDialog
     AnchorSideTop.Control = NoteLabel
     AnchorSideTop.Side = asrBottom
     Left = 11
-    Height = 22
-    Top = 102
-    Width = 167
+    Height = 19
+    Top = 99
+    Width = 134
     BorderSpacing.Around = 6
     Caption = 'Use filter for extra files'
-    OnClick = UseFiltersCheckboxClick
     TabOrder = 1
+    OnClick = UseFiltersCheckboxClick
   end
   object NoteLabel: TLabel
     AnchorSideTop.Control = DestDirGroupBox
     AnchorSideTop.Side = asrBottom
     Left = 11
-    Height = 18
+    Height = 15
     Top = 78
-    Width = 383
+    Width = 350
     BorderSpacing.Around = 6
     Caption = 'Files belonging to project / package will be included automatically.'
     Font.Color = clMaroon
@@ -141,12 +143,12 @@ object PublishModuleDialog: TPublishModuleDialog
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = FilterSimpleSyntaxCheckbox
     Left = 24
-    Height = 32
-    Top = 130
-    Width = 466
+    Height = 23
+    Top = 124
+    Width = 515
     Anchors = [akTop, akLeft, akRight]
     BorderSpacing.Left = 13
-    ItemHeight = 24
+    ItemHeight = 15
     TabOrder = 2
     Text = 'FilterCombobox'
   end
@@ -154,10 +156,12 @@ object PublishModuleDialog: TPublishModuleDialog
     AnchorSideLeft.Side = asrBottom
     AnchorSideTop.Control = FilterCombobox
     AnchorSideTop.Side = asrCenter
-    Left = 496
-    Height = 22
-    Top = 135
-    Width = 114
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    Left = 545
+    Height = 19
+    Top = 126
+    Width = 91
     Anchors = [akTop, akRight]
     BorderSpacing.Around = 6
     Caption = 'Simple Syntax'
