--- a/ide/genericchecklist.lfm
+++ b/ide/genericchecklist.lfm
@@ -7,8 +7,10 @@ object GenericCheckListForm: TGenericCheckListForm
   Caption = 'GenericCheckListForm'
   ClientHeight = 277
   ClientWidth = 343
+  KeyPreview = True
   Position = poScreenCenter
   LCLVersion = '3.99.0.0'
+  OnKeyDown = FormKeyDown
   OnShow = FormShow
   object ButtonPanel1: TButtonPanel
     Left = 6
@@ -16,7 +18,9 @@ object GenericCheckListForm: TGenericCheckListForm
     Top = 245
     Width = 331
     OKButton.Name = 'OKButton'
+    OKButton.Hint = '[Ctrl+Enter]'
     OKButton.DefaultCaption = True
+    OKButton.ShowHint = True
     HelpButton.Name = 'HelpButton'
     HelpButton.DefaultCaption = True
     HelpButton.Enabled = False
@@ -25,7 +29,7 @@ object GenericCheckListForm: TGenericCheckListForm
     CloseButton.Enabled = False
     CancelButton.Name = 'CancelButton'
     CancelButton.DefaultCaption = True
-    TabOrder = 0
+    TabOrder = 1
     ShowButtons = [pbOK, pbCancel]
     ShowBevel = False
   end
@@ -42,7 +46,7 @@ object GenericCheckListForm: TGenericCheckListForm
     Anchors = [akTop, akLeft, akRight, akBottom]
     BorderSpacing.Around = 6
     ItemHeight = 0
-    TabOrder = 1
+    TabOrder = 0
     OnItemClick = CheckListBox1ItemClick
   end
   object InfoLabel: TLabel
