IDE: Add a button for loading from a file into "TStrings" property editor

--- a/components/ideintf/stringspropeditdlg.lfm
+++ b/components/ideintf/stringspropeditdlg.lfm
@@ -97,14 +97,37 @@ object StringsPropEditorFrm: TStringsPropEditorFrm
       AnchorSideRight.Side = asrBottom
       Left = 305
       Height = 32
+      Hint = '[Ctrl+S]'
       Top = 82
       Width = 75
       Anchors = [akTop, akLeft, akRight]
       AutoSize = True
       BorderSpacing.Top = 6
       Caption = 'Save'
+      ParentShowHint = False
+      ShowHint = True
       TabOrder = 3
       OnClick = SaveButtonClick
+    end
+    object LoadButton: TButton
+      AnchorSideLeft.Control = SortButton
+      AnchorSideTop.Control = SaveButton
+      AnchorSideTop.Side = asrBottom
+      AnchorSideRight.Control = SortButton
+      AnchorSideRight.Side = asrBottom
+      Left = 303
+      Height = 23
+      Hint = '[Ctrl+O]'
+      Top = 93
+      Width = 75
+      Anchors = [akTop, akLeft, akRight]
+      AutoSize = True
+      BorderSpacing.Top = 6
+      Caption = 'Load'
+      ParentShowHint = False
+      ShowHint = True
+      TabOrder = 4
+      OnClick = LoadButtonClick
     end
   end
   object BtnPanel: TButtonPanel
@@ -131,7 +154,12 @@ object StringsPropEditorFrm: TStringsPropEditorFrm
   object SaveDialog1: TSaveDialog
     DefaultExt = '.txt'
     Options = [ofOverwritePrompt, ofEnableSizing, ofViewDetail]
-    Left = 183
-    Top = 148
+    Left = 224
+    Top = 80
+  end
+  object OpenDialog1: TOpenDialog
+    Options = [ofFileMustExist, ofEnableSizing, ofViewDetail]
+    Left = 224
+    Top = 136
   end
 end
