--- a/components/ideintf/stringspropeditdlg.lfm
+++ b/components/ideintf/stringspropeditdlg.lfm
@@ -4,6 +4,7 @@ object StringsPropEditorFrm: TStringsPropEditorFrm
   Top = 359
   Width = 400
   ActiveControl = Memo
+  AllowDropFiles = True
   Caption = 'StringsPropEditorFrm'
   ClientHeight = 302
   ClientWidth = 400
@@ -13,6 +14,7 @@ object StringsPropEditorFrm: TStringsPropEditorFrm
   Position = poScreenCenter
   OnClose = FormClose
   OnCreate = FormCreate
+  OnDropFiles = FormDropFiles
   OnKeyDown = FormKeyDown
   object TextGroupBox: TGroupBox
     AnchorSideLeft.Control = Owner
