--- a/ide/buildlazdialog.lfm
+++ b/ide/buildlazdialog.lfm
@@ -29,7 +29,7 @@ object ConfigureBuildLazarusDlg: TConfigureBuildLazarusDlg
     BevelOuter = bvNone
     ClientHeight = 38
     ClientWidth = 700
-    TabOrder = 0
+    TabOrder = 1
     object CancelButton: TBitBtn
       Left = 612
       Height = 26
@@ -72,6 +72,7 @@ object ConfigureBuildLazarusDlg: TConfigureBuildLazarusDlg
       AutoSize = True
       BorderSpacing.Around = 6
       Caption = 'Compile'
+      Default = True
       ParentShowHint = False
       ShowHint = True
       TabOrder = 1
@@ -110,7 +111,7 @@ object ConfigureBuildLazarusDlg: TConfigureBuildLazarusDlg
     ActivePage = BuildTabSheet
     Align = alClient
     TabIndex = 0
-    TabOrder = 1
+    TabOrder = 0
     object BuildTabSheet: TTabSheet
       Caption = 'BuildTabSheet'
       ClientHeight = 414
