Packager/InstallPkgSetDialog: Setting options for selecting in lists

--- a/packager/installpkgsetdlg.lfm
+++ b/packager/installpkgsetdlg.lfm
@@ -293,12 +293,15 @@ object InstallPkgSetDialog: TInstallPkgSetDialog
         Anchors = [akTop, akLeft, akRight, akBottom]
         HideSelection = False
         MultiSelect = True
+        MultiSelectStyle = [msControlSelect, msShiftSelect, msVisibleOnly]
         ReadOnly = True
+        RightClickSelect = True
+        RowSelect = True
         ShowButtons = False
         ShowLines = False
         ShowRoot = False
         TabOrder = 1
-        Options = [tvoAllowMultiselect, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoToolTips, tvoThemedDraw]
+        Options = [tvoAllowMultiselect, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoToolTips, tvoThemedDraw]
         OnAdvancedCustomDrawItem = TreeViewAdvancedCustomDrawItem
         OnDblClick = AddToUninstall
         OnKeyDown = InstallTreeViewKeyDown
@@ -424,12 +427,15 @@ object InstallPkgSetDialog: TInstallPkgSetDialog
         Anchors = [akTop, akLeft, akRight, akBottom]
         HideSelection = False
         MultiSelect = True
+        MultiSelectStyle = [msControlSelect, msShiftSelect, msVisibleOnly]
         ReadOnly = True
+        RightClickSelect = True
+        RowSelect = True
         ShowButtons = False
         ShowLines = False
         ShowRoot = False
         TabOrder = 1
-        Options = [tvoAllowMultiselect, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoToolTips, tvoThemedDraw]
+        Options = [tvoAllowMultiselect, tvoAutoItemHeight, tvoKeepCollapsedNodes, tvoReadOnly, tvoRightClickSelect, tvoRowSelect, tvoToolTips, tvoThemedDraw]
         OnAdvancedCustomDrawItem = TreeViewAdvancedCustomDrawItem
         OnDblClick = AddToInstall
         OnKeyDown = AvailableTreeViewKeyDown
