--- a/ide/frames/project_application_options.lfm
+++ b/ide/frames/project_application_options.lfm
@@ -26,7 +26,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 6
       Height = 15
       Top = 10
-      Width = 50
+      Width = 51
       BorderSpacing.Left = 6
       Caption = 'TitleLabel'
       ParentColor = False
@@ -49,7 +49,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 240
       Height = 15
       Top = 161
-      Width = 78
+      Width = 79
       BorderSpacing.Top = 8
       Caption = 'IconTrackLabel'
       ParentColor = False
@@ -73,11 +73,11 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 6
       Height = 19
       Top = 465
-      Width = 151
+      Width = 148
       BorderSpacing.Top = 3
       Caption = 'UseAppBundleCheckBox'
-      OnChange = UseAppBundleCheckBoxChange
       TabOrder = 13
+      OnChange = UseAppBundleCheckBoxChange
     end
     object UseXPManifestCheckBox: TCheckBox
       AnchorSideLeft.Control = TitleLabel
@@ -86,11 +86,11 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 6
       Height = 19
       Top = 254
-      Width = 152
+      Width = 149
       BorderSpacing.Top = 3
       Caption = 'UseXPManifestCheckBox'
-      OnChange = UseXPManifestCheckBoxChange
       TabOrder = 5
+      OnChange = UseXPManifestCheckBoxChange
     end
     object IconPanel: TPanel
       AnchorSideLeft.Control = AppSettingsGroupBox
@@ -130,9 +130,9 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Top = 165
       Width = 128
       Max = 0
-      OnChange = IconTrackChange
       Position = 0
       ShowSelRange = False
+      OnChange = IconTrackChange
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 2
       TabOrder = 3
@@ -144,7 +144,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 27
       Height = 19
       Top = 328
-      Width = 120
+      Width = 117
       BorderSpacing.Top = 3
       Caption = 'UIAccessCheckBox'
       TabOrder = 8
@@ -155,10 +155,10 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = DpiAwareComboBox
       AnchorSideRight.Side = asrBottom
-      Left = 164
+      Left = 163
       Height = 23
       Top = 302
-      Width = 313
+      Width = 314
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 3
       ItemHeight = 15
@@ -172,7 +172,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 27
       Height = 15
       Top = 306
-      Width = 107
+      Width = 106
       Caption = 'ExecutionLevelLabel'
       ParentColor = False
     end
@@ -205,8 +205,8 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       BorderSpacing.Top = 6
       BorderSpacing.Bottom = 6
       Caption = 'CreateAppBundleButton'
-      OnClick = CreateAppBundleButtonClick
       TabOrder = 14
+      OnClick = CreateAppBundleButtonClick
     end
     object DpiAwareLabel: TLabel
       AnchorSideLeft.Control = UseXPManifestCheckBox
@@ -228,10 +228,10 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = TitleEdit
       AnchorSideRight.Side = asrBottom
-      Left = 164
+      Left = 163
       Height = 23
       Top = 276
-      Width = 313
+      Width = 314
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Left = 30
       BorderSpacing.Top = 3
@@ -246,7 +246,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 6
       Height = 19
       Top = 211
-      Width = 150
+      Width = 147
       Caption = 'UseLCLScalingCheckBox'
       TabOrder = 4
     end
@@ -294,10 +294,10 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = DpiAwareComboBox
       AnchorSideRight.Side = asrBottom
-      Left = 164
+      Left = 163
       Height = 23
       Top = 392
-      Width = 313
+      Width = 314
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 3
       TabOrder = 11
@@ -309,10 +309,10 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       AnchorSideTop.Side = asrBottom
       AnchorSideRight.Control = DpiAwareComboBox
       AnchorSideRight.Side = asrBottom
-      Left = 164
+      Left = 163
       Height = 23
       Top = 418
-      Width = 313
+      Width = 314
       Anchors = [akTop, akLeft, akRight]
       BorderSpacing.Top = 3
       TabOrder = 12
@@ -325,7 +325,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 27
       Height = 19
       Top = 349
-      Width = 124
+      Width = 121
       BorderSpacing.Top = 2
       Caption = 'LongPathCheckBox'
       TabOrder = 9
@@ -354,8 +354,8 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
         Width = 123
         AutoSize = True
         Caption = 'LoadIconButton'
-        OnClick = LoadIconButtonClick
         TabOrder = 0
+        OnClick = LoadIconButtonClick
       end
       object DefaultIconButton: TBitBtn
         Left = 0
@@ -364,8 +364,8 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
         Width = 123
         AutoSize = True
         Caption = 'DefaultIconButton'
-        OnClick = DefaultIconButtonClick
         TabOrder = 1
+        OnClick = DefaultIconButtonClick
       end
       object SaveIconButton: TBitBtn
         Left = 0
@@ -374,8 +374,8 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
         Width = 123
         AutoSize = True
         Caption = 'SaveIconButton'
-        OnClick = SaveIconButtonClick
         TabOrder = 2
+        OnClick = SaveIconButtonClick
       end
       object ClearIconButton: TBitBtn
         Left = 0
@@ -384,8 +384,8 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
         Width = 123
         AutoSize = True
         Caption = 'ClearIconButton'
-        OnClick = ClearIconButtonClick
         TabOrder = 3
+        OnClick = ClearIconButtonClick
       end
     end
     object AnsiUTF8CheckBox: TCheckBox
@@ -395,7 +395,7 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
       Left = 27
       Height = 19
       Top = 370
-      Width = 122
+      Width = 120
       BorderSpacing.Top = 2
       Caption = 'AnsiUTF8CheckBox'
       TabOrder = 10
@@ -431,11 +431,11 @@ object ProjectApplicationOptionsFrame: TProjectApplicationOptionsFrame
     end
   end
   object OpenPictureDialog1: TOpenPictureDialog
-    left = 385
-    top = 190
+    Left = 385
+    Top = 190
   end
   object SavePictureDialog1: TSavePictureDialog
-    left = 385
-    top = 249
+    Left = 385
+    Top = 249
   end
 end
