--- a/lcl/forms/timepopup.lfm
+++ b/lcl/forms/timepopup.lfm
@@ -20,6 +20,7 @@ object TimePopupForm: TTimePopupForm
     Top = 0
     Width = 294
     Align = alClient
+    Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BevelOuter = bvNone
     BorderWidth = 1
@@ -224,22 +225,41 @@ object TimePopupForm: TTimePopupForm
       BorderSpacing.Top = 7
       Shape = bsTopLine
     end
-    object MoreLessBtn: TBitBtn
-      AnchorSideTop.Control = MinutesGrid
-      AnchorSideTop.Side = asrBottom
-      AnchorSideRight.Control = MainPanel
-      AnchorSideRight.Side = asrBottom
-      Left = 247
-      Height = 25
-      Hint = 'Ctrl + >'
-      Top = 125
-      Width = 42
-      Anchors = [akTop, akRight]
-      AutoSize = True
-      BorderSpacing.Top = 5
-      Caption = '>>'
+    object ButtonPanel1: TButtonPanel
+      Left = 7
+      Height = 26
+      Top = 126
+      Width = 276
+      Align = alTop
+      OKButton.Name = 'OKButton'
+      OKButton.DefaultCaption = True
+      OKButton.OnClick = OKButtonClick
+      HelpButton.Name = 'HelpButton'
+      HelpButton.DefaultCaption = True
+      CloseButton.Name = 'CloseButton'
+      CloseButton.DefaultCaption = True
+      CancelButton.Name = 'CancelButton'
+      CancelButton.DefaultCaption = True
+      CancelButton.OnClick = CancelButtonClick
       TabOrder = 2
-      OnClick = MoreLessBtnClick
+      ShowButtons = [pbOK, pbCancel]
+      ShowBevel = False
+      object MoreLessBtn: TBitBtn
+        AnchorSideLeft.Control = ButtonPanel1
+        AnchorSideTop.Control = ButtonPanel1
+        AnchorSideRight.Side = asrBottom
+        AnchorSideBottom.Side = asrBottom
+        Left = 0
+        Height = 25
+        Hint = 'Ctrl + >'
+        Top = 0
+        Width = 94
+        AutoSize = True
+        Caption = 'MoreLessBtn'
+        Spacing = 0
+        TabOrder = 4
+        OnClick = MoreLessBtnClick
+      end
     end
   end
 end
