--- a/components/jcf2/Ui/Settings/frReservedCapsSettings.lfm
+++ b/components/jcf2/Ui/Settings/frReservedCapsSettings.lfm
@@ -1,15 +1,15 @@
 object frReservedCapsSettings: TfrReservedCapsSettings
   Left = 0
-  Height = 486
+  Height = 507
   Top = 0
-  Width = 502
+  Width = 421
   Anchors = [akTop, akLeft, akRight]
-  ClientHeight = 486
-  ClientWidth = 502
+  ClientHeight = 507
+  ClientWidth = 421
   TabOrder = 0
   OnResize = FrameResize
-  DesignLeft = 442
-  DesignTop = 207
+  DesignLeft = 853
+  DesignTop = 335
   object cbEnable: TCheckBox
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
@@ -32,7 +32,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     Left = 6
     Height = 108
     Top = 31
-    Width = 329
+    Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
     AutoSize = True
@@ -47,7 +47,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 88
-    ClientWidth = 325
+    ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
       'ALL CAPITALS'
@@ -58,18 +58,20 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     TabOrder = 1
   end
   object rgOperators: TRadioGroup
-    AnchorSideTop.Control = rgReservedWords
+    AnchorSideLeft.Control = rgReservedWords
+    AnchorSideLeft.Side = asrBottom
+    AnchorSideTop.Control = cbEnable
+    AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = rgReservedWords
     AnchorSideBottom.Side = asrBottom
-    Left = 341
+    Left = 216
     Height = 108
     Top = 31
-    Width = 155
-    Anchors = [akTop, akRight, akBottom]
+    Width = 199
+    Anchors = [akTop, akRight]
     AutoFill = True
-    BorderSpacing.Right = 6
+    BorderSpacing.Around = 6
     Caption = 'Operators'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -80,7 +82,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 88
-    ClientWidth = 151
+    ClientWidth = 195
     ItemIndex = 1
     Items.Strings = (
       'ALL CAPITALS'
@@ -98,7 +100,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     Left = 6
     Height = 108
     Top = 259
-    Width = 329
+    Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
     AutoSize = True
@@ -113,7 +115,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 88
-    ClientWidth = 325
+    ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
       'ALL CAPITALS'
@@ -125,18 +127,18 @@ object frReservedCapsSettings: TfrReservedCapsSettings
   end
   object rgConstants: TRadioGroup
     AnchorSideLeft.Control = rgOperators
-    AnchorSideTop.Control = rgDirectives
+    AnchorSideTop.Control = rgOperators
+    AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = Owner
     AnchorSideRight.Side = asrBottom
-    AnchorSideBottom.Control = rgDirectives
     AnchorSideBottom.Side = asrBottom
-    Left = 341
+    Left = 222
     Height = 108
     Top = 145
-    Width = 155
-    Anchors = [akTop, akLeft, akRight, akBottom]
+    Width = 193
+    Anchors = [akTop, akLeft, akRight]
     AutoFill = True
-    BorderSpacing.Right = 6
+    BorderSpacing.Around = 6
     Caption = 'Constants'
     ChildSizing.LeftRightSpacing = 6
     ChildSizing.TopBottomSpacing = 6
@@ -147,7 +149,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 88
-    ClientWidth = 151
+    ClientWidth = 189
     ItemIndex = 1
     Items.Strings = (
       'ALL CAPITALS'
@@ -165,7 +167,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     Left = 6
     Height = 108
     Top = 145
-    Width = 329
+    Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
     AutoSize = True
@@ -180,7 +182,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
     ClientHeight = 88
-    ClientWidth = 325
+    ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
       'ALL CAPITALS'
@@ -195,17 +197,19 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideTop.Control = rgTypes
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgOperators
+    AnchorSideBottom.Control = rgFloatingPointNumbers
+    AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 101
+    Height = 102
     Top = 373
-    Width = 329
-    Anchors = [akTop, akLeft, akRight]
+    Width = 204
+    Anchors = [akTop, akLeft, akRight, akBottom]
     AutoSize = True
     BorderSpacing.Around = 6
     Caption = 'Normalize capitalisation'
-    ClientHeight = 81
-    ClientWidth = 325
-    TabOrder = 6
+    ClientHeight = 82
+    ClientWidth = 200
+    TabOrder = 7
     object cbNormalizeIdentifiers: TCheckBox
       AnchorSideLeft.Control = gbNormalizeCapitalisation
       AnchorSideTop.Control = gbNormalizeCapitalisation
@@ -241,5 +245,73 @@ object frReservedCapsSettings: TfrReservedCapsSettings
       Caption = 'Use only one namespace'
       TabOrder = 2
     end
+  end
+  object rgHexadecimalNumbers: TRadioGroup
+    AnchorSideLeft.Control = rgOperators
+    AnchorSideTop.Control = rgConstants
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Side = asrBottom
+    Left = 222
+    Height = 108
+    Top = 259
+    Width = 193
+    Anchors = [akTop, akLeft, akRight]
+    AutoFill = True
+    BorderSpacing.Around = 6
+    Caption = 'Hexadecimal numbers'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 88
+    ClientWidth = 189
+    ItemIndex = 1
+    Items.Strings = (
+      'ALL CAPITALS'
+      'all lowercase'
+      'Mixed Case'
+      'Leave alone'
+    )
+    TabOrder = 6
+  end
+  object rgFloatingPointNumbers: TRadioGroup
+    AnchorSideLeft.Control = rgOperators
+    AnchorSideTop.Control = rgHexadecimalNumbers
+    AnchorSideTop.Side = asrBottom
+    AnchorSideRight.Control = Owner
+    AnchorSideRight.Side = asrBottom
+    AnchorSideBottom.Side = asrBottom
+    Left = 222
+    Height = 108
+    Top = 373
+    Width = 193
+    Anchors = [akTop, akLeft, akRight]
+    AutoFill = True
+    BorderSpacing.Around = 6
+    Caption = 'Floating point numbers'
+    ChildSizing.LeftRightSpacing = 6
+    ChildSizing.TopBottomSpacing = 6
+    ChildSizing.EnlargeHorizontal = crsHomogenousChildResize
+    ChildSizing.EnlargeVertical = crsHomogenousChildResize
+    ChildSizing.ShrinkHorizontal = crsScaleChilds
+    ChildSizing.ShrinkVertical = crsScaleChilds
+    ChildSizing.Layout = cclLeftToRightThenTopToBottom
+    ChildSizing.ControlsPerLine = 1
+    ClientHeight = 88
+    ClientWidth = 189
+    ItemIndex = 1
+    Items.Strings = (
+      'ALL CAPITALS'
+      'all lowercase'
+      'Mixed Case'
+      'Leave alone'
+    )
+    TabOrder = 8
   end
 end
