JCF2: fixed size of a groupbox in Capitalization Settings page

--- a/components/jcf2/Ui/Settings/frReservedCapsSettings.lfm
+++ b/components/jcf2/Ui/Settings/frReservedCapsSettings.lfm
@@ -14,9 +14,9 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideLeft.Control = Owner
     AnchorSideTop.Control = Owner
     Left = 6
-    Height = 19
+    Height = 21
     Top = 6
-    Width = 141
+    Width = 161
     BorderSpacing.Around = 6
     Caption = 'Enable fix capitalisation'
     Checked = True
@@ -30,8 +30,8 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgOperators
     Left = 6
-    Height = 108
-    Top = 31
+    Height = 114
+    Top = 33
     Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -46,7 +46,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 96
     ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
@@ -67,7 +67,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideBottom.Side = asrBottom
     Left = 216
     Height = 108
-    Top = 31
+    Top = 33
     Width = 199
     Anchors = [akTop, akRight]
     AutoFill = True
@@ -81,7 +81,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 90
     ClientWidth = 195
     ItemIndex = 1
     Items.Strings = (
@@ -98,8 +98,8 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgOperators
     Left = 6
-    Height = 108
-    Top = 259
+    Height = 114
+    Top = 273
     Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -114,7 +114,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 96
     ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
@@ -134,7 +134,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideBottom.Side = asrBottom
     Left = 222
     Height = 108
-    Top = 145
+    Top = 147
     Width = 193
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -148,7 +148,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 90
     ClientWidth = 189
     ItemIndex = 1
     Items.Strings = (
@@ -165,8 +165,8 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgOperators
     Left = 6
-    Height = 108
-    Top = 145
+    Height = 114
+    Top = 153
     Width = 204
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -181,7 +181,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 96
     ClientWidth = 200
     ItemIndex = 1
     Items.Strings = (
@@ -197,26 +197,25 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideTop.Control = rgTypes
     AnchorSideTop.Side = asrBottom
     AnchorSideRight.Control = rgOperators
-    AnchorSideBottom.Control = rgFloatingPointNumbers
     AnchorSideBottom.Side = asrBottom
     Left = 6
-    Height = 102
-    Top = 373
+    Height = 105
+    Top = 393
     Width = 204
-    Anchors = [akTop, akLeft, akRight, akBottom]
+    Anchors = [akTop, akLeft, akRight]
     AutoSize = True
     BorderSpacing.Around = 6
     Caption = 'Normalize capitalisation'
-    ClientHeight = 82
+    ClientHeight = 87
     ClientWidth = 200
     TabOrder = 7
     object cbNormalizeIdentifiers: TCheckBox
       AnchorSideLeft.Control = gbNormalizeCapitalisation
       AnchorSideTop.Control = gbNormalizeCapitalisation
       Left = 6
-      Height = 19
+      Height = 21
       Top = 6
-      Width = 70
+      Width = 80
       BorderSpacing.Around = 6
       Caption = 'Identifiers'
       TabOrder = 0
@@ -226,9 +225,9 @@ object frReservedCapsSettings: TfrReservedCapsSettings
       AnchorSideTop.Control = cbNormalizeIdentifiers
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 19
-      Top = 31
-      Width = 98
+      Height = 21
+      Top = 33
+      Width = 107
       BorderSpacing.Around = 6
       Caption = 'Non-identifiers'
       TabOrder = 1
@@ -238,9 +237,9 @@ object frReservedCapsSettings: TfrReservedCapsSettings
       AnchorSideTop.Control = cbNormalizeNotIdentifiers
       AnchorSideTop.Side = asrBottom
       Left = 6
-      Height = 19
-      Top = 56
-      Width = 149
+      Height = 21
+      Top = 60
+      Width = 171
       BorderSpacing.Around = 6
       Caption = 'Use only one namespace'
       TabOrder = 2
@@ -255,7 +254,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideBottom.Side = asrBottom
     Left = 222
     Height = 108
-    Top = 259
+    Top = 261
     Width = 193
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -269,7 +268,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 90
     ClientWidth = 189
     ItemIndex = 1
     Items.Strings = (
@@ -289,7 +288,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     AnchorSideBottom.Side = asrBottom
     Left = 222
     Height = 108
-    Top = 373
+    Top = 375
     Width = 193
     Anchors = [akTop, akLeft, akRight]
     AutoFill = True
@@ -303,7 +302,7 @@ object frReservedCapsSettings: TfrReservedCapsSettings
     ChildSizing.ShrinkVertical = crsScaleChilds
     ChildSizing.Layout = cclLeftToRightThenTopToBottom
     ChildSizing.ControlsPerLine = 1
-    ClientHeight = 88
+    ClientHeight = 90
     ClientWidth = 189
     ItemIndex = 1
     Items.Strings = (
